app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@add_subnet_validator.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/add_subnet_validator.json
---
[
    "SubnetValidator": "Transaction",
    "Validator": "NodeID-NFBbbJ4qCmNaCzeW7sxErhvWqvEQMnYcN",
    "Start time": "2020-07-29 22:07:25 UTC",
    "End time": "2020-08-28 21:57:26 UTC",
    "Total stake(METAL)": "0.000054321",
    "SubnetID": "g4WNtLL98APX666NZGfjoDDsr6fsS27NsjhuCSTAeX5Dtx1Nb",
    "Fee(METAL)": "2000.001",
]
