app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@c_export_to_p.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/c_export_to_p.json
---
[
    "Export Tx": "C to P Chain",
    "Amount": "47473250 METAL to ",
    "Address": "local18jma8ppw3nhx5r4ap8clazz0dps7rv5u00z96u",
    "Fee": "2526750",
]
