app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@c_import_from_x2.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/c_import_from_x2.json
---
[
    "ImportTx": "Sending",
    "Amount": "0.000012345 METAL to ",
    "Address": "tahoe1cv6yz28qvqfgah34yw3y53su39p6kzzes5cjy5",
    "From ": "C Chain",
    "Fee(METAL)": "0.246901233",
]
